<resources>
    <string name="app_name">IdeaStudio</string>


    <!-- Strings related to sql connection -->
    <string name="sql_connection_url">jdbc:mysql://10.0.2.2:3306/isa</string>
    <string name="sql_connection_username">richard</string>
    <string name="sql_connection_password">670820</string>


    <!-- Strings related to Adventure List Screen -->
    <string name="AdventurePriceFree">Free</string>

    <!-- SharedPreferences keys -->
    <string name="hu.ideastudio.richard_loginInfo">hu.ideastudio.richard_loginInfo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Log In</string>

    <!-- Drawer layout elements -->
    <string name="login">Log in</string>
    <string name="adventures">Adventures</string>
    <string name="communicate">Comminicate</string>
    <string name="bug_report">Bug report</string>
    <string name="username"></string>
    <string name="redeem">Redeem code</string>


    <!-- Strings related to login -->
    <string name="login_prompt_email">Email</string>
    <string name="login_prompt_password">Password</string>
    <string name="login_action_sign_in">Log in</string>
    <string name="login_action_sign_in_short">Log in</string>
    <string name="login_error_invalid_email">Given email address is not correct</string>
    <string name="login_error_invalid_password">Password is too short</string>
    <string name="login_error_incorrect_password">Given password is not correct</string>
    <string name="login_error_field_required">Required field</string>
    <string name="login_permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="login_register">Register</string>
    <string name="login_password_failure">The password you entered is incorrect</string>
    <string name="login_password_succes">Logged in</string>

    <!-- Strings related to Register screen -->
    <string name="register_prompt_label">Register</string>
    <string name="register_prompt_email">Email</string>
    <string name="register_prompt_password">Password</string>
    <string name="register_prompt_firstname">Forename</string>
    <string name="register_prompt_lastname">Surname</string>
    <string name="register_prompt_newsletter">Newsletter</string>
    <string name="register_prompt_register">Register</string>

    <!-- Code Redeem -->
    <string name="redeem_dialog_title">Type Redeem code</string>
    <string name="redeem_dialog_btn_redeem">Redeem</string>
    <string name="redeem_dialog_btn_dismiss">Dismiss</string>
    <string name="title_activity_string__selector_">String_Selector_Activity</string>

    <!--Strings related to String Checker -->
    <string name="task_string_guess_help">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="task_string_guess_hint_in_edittext">Password</string>
    <string name="task_string_guess_button_text">Check</string>
    <string name="title_activity_image_view">ImageViewActivity</string>
    <string name="title_activity_zoom_in_zoom_out">ZoomInZoomOut</string>
    <string name="title_activity_adventure_details">AdventureDetailsActivity</string>
    <string name="title_activity_simple_maps">Map</string>


</resources>
