<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hu.ideastudio.richard.ideastudio.RegisterActivity">


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

    <RelativeLayout
        android:id="@+id/activity_register_mainLayout"
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="2dp">



        <ProgressBar
            android:id="@+id/register_progressBar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/textViewFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/register_prompt_firstname"
            android:textColor="@color/colorBlack"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="4dp" />

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewFirstName"
            android:ems="10"
            android:hint="@string/register_prompt_firstname"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="28dp" />

        <TextView
            android:id="@+id/textViewLastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editTextFirstName"
            android:layout_marginTop="20dp"
            android:text="@string/register_prompt_lastname"
            android:textColor="@color/colorBlack" />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewLastname"
            android:ems="10"
            android:hint="@string/register_prompt_lastname"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editTextLastName"
            android:layout_marginTop="20dp"
            android:text="@string/register_prompt_email"
            android:textColor="@color/colorBlack" />

        <EditText
            android:id="@+id/editText_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewEmail"
            android:hint="@string/register_prompt_email"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="60dp" />

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editText_register_email"
            android:layout_marginTop="20dp"
            android:text="@string/register_prompt_password"
            android:textColor="@color/colorBlack" />

        <EditText
            android:id="@+id/editText_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewPassword"
            android:hint="@string/register_prompt_password"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="209dp" />


        <CheckBox
            android:id="@+id/checkboxNewsletter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editText_register_password"
            android:text="@string/register_prompt_newsletter" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:singleLine="true"
            android:maxLines="1"
            android:layout_below="@+id/editText_register_password"
            android:layout_toEndOf="@+id/checkboxNewsletter"

            android:text="@string/register_prompt_register" />


    </RelativeLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
